plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.2'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'ru.frank'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.telegram', name: 'telegrambots', version: '3.5'
	compileOnly 'org.projectlombok:lombok'
	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.12.RELEASE'
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
	testImplementation group: 'junit', name: 'junit', version: '4.13.1'
	testImplementation group: 'org.springframework.boot', name: 'spring-boot-test-autoconfigure', version: '2.0.9.RELEASE'
}

tasks.named('test') {
	useJUnitPlatform()
}
